# linityTodo

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/todo/: handlers.rs  models.rs
backend/src/user/: handlers.rs  models.rs
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/components/: AuthForm.tsx  TodoCard.tsx  TodoList.tsx
frontend/src/store/: userStore.ts
frontend/src/types/: todo.ts
