[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.0", features = ["full"] }
sqlx = {version = "0.8.3", features = ["postgres","runtime-tokio","tls-native-tls","macros","uuid"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140"}
dotenvy = "0.15.7"
uuid = {version = "1.15.1", features = ["v4", "serde"]}
sqlx-cli = "0.8.3"
utoipa = {version = "5", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "9", features = ["axum"] }